# Evidence-Tracer

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/api/routes/: documents.py  evidence.py  health.py  workspace.py
backend/app/core/: __init__.py  config.py  database.py  observability.py
backend/app/pipelines/: docling_pipeline.py
backend/app/services/: catalog_service.py  evidence_agent.py  evidence_service.py  pdf_service.py  processing_service.py
backend/app/tests/: test_catalog_root_scoping.py  test_config.py  test_docling_bbox_debug.py  test_docling_records.py  test_evidence_agent.py  test_evidence_service.py  test_observability.py  test_processing_service.py  test_real_ollama_agent.py
backend/app/utils/: bbox.py  common.py  docling_records.py
backend/test/: docling_bbox_debug.py
tauri-app/: README.md  index.html  package-lock.json  package.json
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
